# oral-mucosa-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  OPERATIONS.md  README.md  add_clinical_cases.py  agents.py  agents_enhanced.py  app.py  config.py  conversation.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  run_simulation.py  tool_executors.py  tools.py  wang_cases.py  wsgi.py
.github/workflows/: deploy.yml
deploy/: auto_pull.sh  deploy.sh  nginx.conf  update.sh  upload.ps1
scripts/: evaluate.py  run_eval_check.py  run_tcm_detail.py
web/: app.js  index.html  login.html
