[project]
name = "oral-mucosa-agent"
version = "0.1.0"
description = "口腔黏膜病 AI 诊断 Agent — 基于 DeepSeek + MIRA 架构"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]
